Stopped figcaptions being hidden on mobile

--- a/css/scroll-effects.css
+++ b/css/scroll-effects.css
@@ -82,11 +82,14 @@
         padding: 0 0.75rem 0.75rem 40%;
         margin: 0;
     }
+
+    .diagonal .main-image-figure figcaption {
+        /* Transition is added in JavaScript. */
+        clip-path: polygon(0 0, 0 0, 0.25rem 100%, 0.25rem 100%);
+    }
 }
 
 .diagonal .main-image-figure figcaption {
-    /* Transition is added in JavaScript. */
-    clip-path: polygon(0 0, 0 0, 0.25rem 100%, 0.25rem 100%);
     /* z-index: 1; */
     position: absolute;
     max-width: calc(80% - 2rem);
